# apps-rust

calculator/: Cargo.toml
calculator/src/: app.rs  engine.rs  main.rs
egui-fancy/: AGENTS.md  CLAUDE.md  Cargo.toml  MILESTONES.md  SPEC.md
egui-fancy/src/: animation.rs  app.rs  main.rs  theme.rs
egui-fancy/src/sections/: buttons.rs  dashboard.rs  data_viz.rs  mod.rs  (+3 more)
file_explorer/: Cargo.toml
file_explorer/src/: app.rs  main.rs
iced-fancy/: CLAUDE.md  Cargo.toml  MILESTONES.md  SPEC.md
iced-fancy/.claude/: settings.json
iced-fancy/src/: app.rs  main.rs  menu_bar.rs  sidebar.rs  theme.rs
iced-fancy/src/tabs/: mod.rs
iced-fancy/src/tabs/canvas/: data_viz.rs  mod.rs  procedural_art.rs
iced-fancy/src/tabs/gallery/: badges.rs  buttons.rs  cards.rs  checkboxes.rs  color_picker.rs  context_menu.rs  date_picker.rs  mod.rs  number_input.rs  pick_lists.rs  progress_bars.rs  radios.rs  sliders.rs  spinner.rs  text_inputs.rs  time_picker.rs  togglers.rs  tooltips.rs
iced-fancy/src/tabs/layouts/: containers.rs  mod.rs  nesting.rs  responsive.rs  row_column.rs  scrollable.rs  wrapping.rs
iced-fancy/src/tabs/mixer/: channel.rs  controls.rs  mod.rs  waveform.rs
iced-fancy/src/tabs/pane_grid/: mod.rs
notepad/: Cargo.toml
notepad/src/: app.rs  editor.rs  file_ops.rs  main.rs
pdf_reader/: Cargo.toml  README.md
pdf_reader/src/: app.rs  main.rs  page_cache.rs  pdf_document.rs  recent_files.rs  toolbar.rs  viewer.rs
photo_gallery/: Cargo.toml
photo_gallery/src/: app.rs  image_loader.rs  main.rs
template/: Cargo.toml
yahoo/: Cargo.toml  SPEC.md
(+24 files in other folders)
