[package]
name = "iced_fancy"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "tokio"] }
iced_aw = { version = "0.13.1", features = ["tabs", "tab_bar", "badge", "card", "color_picker", "date_picker", "time_picker", "number_input", "spinner", "context_menu", "wrap", "side_bar", "drop_down", "menu", "selection_list", "slide_bar", "typed_input"] }